--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,11 +1,4 @@
 /*******************************************************************************
-Slate Theme for GitHub Pages
-by Jason Costello, @jsncostello
-*******************************************************************************/
-
-@import url(pygment_trac.css);
-
-/*******************************************************************************
 MeyerWeb Reset
 *******************************************************************************/
 
@@ -48,376 +41,243 @@ table {
 Theme Styles
 *******************************************************************************/
 
-body {
-  box-sizing: border-box;
-  color:#373737;
-  background: #212121;
-  font-size: 16px;
-  font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
+html {
+    height: 100%;
+    min-height: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 10px 0;
-  font-weight: 700;
-  color:#222222;
-  font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
-  letter-spacing: -1px;
+body {
+    box-sizing: border-box;
+    background: #898989;
+    background-image: url(../images/bg.jpg);
+    background-repeat: repeat-x;
+    
+    color: #ccc;
+    font-size: 14px;
+    font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+    height: 100%;
+    min-height: 100%;
 }
 
 h1 {
-  font-size: 36px;
-  font-weight: 700;
+    font-size: 32px;
+    margin: 0px;
 }
 
 h2 {
-  padding-bottom: 10px;
-  font-size: 32px;
-  background: url('../images/bg_hr.png') repeat-x bottom;
+    font-size: 20px;
+    margin: 0px;
 }
 
 h3 {
-  font-size: 24px;
-}
-
-h4 {
-  font-size: 21px;
-}
-
-h5 {
-  font-size: 18px;
-}
-
-h6 {
-  font-size: 16px;
-}
-
-p {
-  margin: 10px 0 15px 0;
-}
-
-footer p {
-  color: #f2f2f2;
+    font-weight: bold;
+    color: white;
+    margin: 0px;
 }
 
 a {
-  text-decoration: none;
-  color: #007edf;
-  text-shadow: none;
-
-  transition: color 0.5s ease;
-  transition: text-shadow 0.5s ease;
-  -webkit-transition: color 0.5s ease;
-  -webkit-transition: text-shadow 0.5s ease;
-  -moz-transition: color 0.5s ease;
-  -moz-transition: text-shadow 0.5s ease;
-  -o-transition: color 0.5s ease;
-  -o-transition: text-shadow 0.5s ease;
-  -ms-transition: color 0.5s ease;
-  -ms-transition: text-shadow 0.5s ease;
+    color: white;
+    text-decoration: none;
 }
 
-a:hover, a:focus {text-decoration: underline;}
-
-footer a {
-  color: #F2F2F2;
-  text-decoration: underline;
+a:visited {
+    color: white;
 }
 
-em {
-  font-style: italic;
+a:active {
+    color: white;
 }
 
-strong {
-  font-weight: bold;
+a:hover {
+    text-decoration: underline;
 }
 
-img {
-  position: relative;
-  margin: 0 auto;
-  max-width: 739px;
-  padding: 5px;
-  margin: 10px 0 10px 0;
-  border: 1px solid #ebebeb;
-
-  box-shadow: 0 0 5px #ebebeb;
-  -webkit-box-shadow: 0 0 5px #ebebeb;
-  -moz-box-shadow: 0 0 5px #ebebeb;
-  -o-box-shadow: 0 0 5px #ebebeb;
-  -ms-box-shadow: 0 0 5px #ebebeb;
+li {
+    background-image: url(../images/bullet.png);
+    background-repeat: no-repeat;
+    padding-left: 30px;
+    margin-bottom: 1.5em;
 }
 
-p img {
-  display: inline;
-  margin: 0;
-  padding: 0;
-  vertical-align: middle;
-  text-align: center;
-  border: none;
+#slate {
+    position: fixed;
+    left: 50%;
+    margin-left: -514px;
+    z-index: -1;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    background-color: black;
+    width: 1024px;
+    height: 100%;
+    box-shadow: 0px 0px 30px 5px rgba(0,0,0,0.5);
 }
 
-pre, code {
-  width: 100%;
-  color: #222;
-  background-color: #fff;
-
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  font-size: 14px;
-
-  border-radius: 2px;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
+#mainframe {
+    position: absolute;
+    left: 50%;
+    margin-left: -512px;
+    z-index: 1;
+    width: 1024px;
+    text-align: center;
 }
 
-pre {
-  width: 100%;
-  padding: 10px;
-  box-shadow: 0 0 10px rgba(0,0,0,.1);
-  overflow: auto;
+#head {
+    height: 377px;
+    width: 100%;
+    background-image: url(../images/head.jpg);
+    text-align: left;
 }
 
-code {
-  padding: 3px;
-  margin: 0 3px;
-  box-shadow: 0 0 10px rgba(0,0,0,.1);
+.topmenu {
+    display: inline-block;
+    position: relative;
+    top: 20px;
+    left: 730px;
 }
 
-pre code {
-  display: block;
-  box-shadow: none;
+.badge {
+    width: 140px;
+    height: 32px;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    display: inline-block;
 }
 
-blockquote {
-  color: #666;
-  margin-bottom: 20px;
-  padding: 0 0 0 20px;
-  border-left: 3px solid #bbb;
+.github {
+    background-image: url(../images/badge_github.png);
+}
+
+.googleplus {
+    background-image: url(../images/badge_google.png);
 }
 
 
-ul, ol, dl {
-  margin-bottom: 15px
+.github:hover {
+    background-image: url(../images/badge_github_hover.png);
 }
 
-ul {
-  list-style: inside;
-  padding-left: 20px;
+.googleplus:hover {
+    background-image: url(../images/badge_google_hover.png);
 }
 
-ol {
-  list-style: decimal inside;
-  padding-left: 20px;
-}
-
-dl dt {
-  font-weight: bold;
-}
-
-dl dd {
-  padding-left: 20px;
-  font-style: italic;
-}
-
-dl p {
-  padding-left: 20px;
-  font-style: italic;
-}
-
-hr {
-  height: 1px;
-  margin-bottom: 5px;
-  border: none;
-  background: url('../images/bg_hr.png') repeat-x center;
-}
-
-table {
-  border: 1px solid #373737;
-  margin-bottom: 20px;
-  text-align: left;
- }
-
-th {
-  font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  padding: 10px;
-  background: #373737;
-  color: #fff;
- }
-
-td {
-  padding: 10px;
-  border: 1px solid #373737;
- }
-
-form {
-  background: #f2f2f2;
-  padding: 20px;
-}
-
-/*******************************************************************************
-Full-Width Styles
-*******************************************************************************/
-
-.outer {
-  width: 100%;
-}
-
-.inner {
-  position: relative;
-  max-width: 640px;
-  padding: 20px 10px;
-  margin: 0 auto;
-}
-
-#forkme_banner {
-  display: block;
-  position: absolute;
-  top:0;
-  right: 10px;
-  z-index: 10;
-  padding: 10px 50px 10px 10px;
-  color: #fff;
-  background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;
-  font-weight: 700;
-  box-shadow: 0 0 10px rgba(0,0,0,.5);
-  border-bottom-left-radius: 2px;
-  border-bottom-right-radius: 2px;
-}
-
-#header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(top, #373737, #212121);
-}
-
-#header_wrap .inner {
-  padding: 50px 10px 30px 10px;
-}
-
-#project_title {
-  margin: 0;
-  color: #fff;
-  font-size: 42px;
-  font-weight: 700;
-  text-shadow: #111 0px 0px 10px;
-}
-
-#project_tagline {
-  color: #fff;
-  font-size: 24px;
-  font-weight: 300;
-  background: none;
-  text-shadow: #111 0px 0px 10px;
-}
-
-#downloads {
-  position: absolute;
-  width: 210px;
-  z-index: 10;
-  bottom: -40px;
-  right: 0;
-  height: 70px;
-  background: url('../images/icon_download.png') no-repeat 0% 90%;
-}
-
-.zip_download_link {
-  display: block;
-  float: right;
-  width: 90px;
-  height:70px;
-  text-indent: -5000px;
-  overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom left;
-}
-
-.tar_download_link {
-  display: block;
-  float: right;
-  width: 90px;
-  height:70px;
-  text-indent: -5000px;
-  overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom right;
-  margin-left: 10px;
-}
-
-.zip_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top left;
-}
-
-.tar_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top right;
-}
-
-#main_content_wrap {
-  background: #f2f2f2;
-  border-top: 1px solid #111;
-  border-bottom: 1px solid #111;
-}
-
-#main_content {
-  padding-top: 40px;
-}
-
-#footer_wrap {
-  background: #212121;
-}
-
-
-
-/*******************************************************************************
-Small Device Styles
-*******************************************************************************/
-
-@media screen and (max-width: 480px) {
-  body {
-    font-size:14px;
-  }
-
-  #downloads {
-    display: none;
-  }
-
-  .inner {
-    min-width: 320px;
-    max-width: 480px;
-  }
-
-  #project_title {
-  font-size: 32px;
-  }
-
-  h1 {
-    font-size: 28px;
-  }
-
-  h2 {
+.download {
+    display: block;
+    width: 158px;
+    height: 58px;
+    position: relative;
+    left: 840px;
+    top: 185px;
+    padding-top: 6px;
+    padding-left: 16px;
+    background-repeat: no-repeat;
+    background-image: url(../images/download.png);
+    line-height: 16px;
     font-size: 24px;
-  }
+    color: black;
+    text-shadow: 0px 1px 0px rgba(255,255,255,0.6);
+    cursor: pointer;
+}
 
-  h3 {
-    font-size: 21px;
-  }
+.download:hover {
+    color: #fd8;
+    text-shadow: 0px -1px 0px rgba(0,0,0,0.6);
+}
 
-  h4 {
-    font-size: 18px;
-  }
+.download .hint {
+    font-size: 10px; 
+    color: #640;
+    text-shadow: none;
+}
 
-  h5 {
-    font-size: 14px;
-  }
+a.element {
+    text-decoration: none;
+}
 
-  h6 {
-    font-size: 12px;
-  }
+.high {
+    color: white;
+}
 
-  code, pre {
-    min-width: 320px;
-    max-width: 480px;
-    font-size: 11px;
-  }
+.low {
+    color: #999;
+}
 
+.separator {
+    width: 100%;
+    height: 156px;
+    background-repeat: no-repeat;
+    background-image: url(../images/separator.jpg);
+    clear:both;
+    margin-top: -30px;
+    margin-bottom: -30px;
+    clear: both;
+}
+
+#keypoints {
+    height: 160px;
+    width: 100%;
+    padding-left: 30px;
+}
+
+.keypoint {
+    display: inline-block;
+    width: 190px;
+    background-repeat: no-repeat;
+    padding-left: 100px;
+    padding-right: 40px;
+    text-align: left;
+    float: left;
+}
+
+.icon_gears {
+    background-image: url(../images/icon_gears.png);
+}
+
+.icon_tools {
+    background-image: url(../images/icon_tools.png);
+}
+
+.icon_theme {
+    background-image: url(../images/icon_theme.png);
+}
+
+#logos {
+    width: 700px;
+    margin: 0 auto;
+    margin-top: -30px;
+}
+
+.logo {
+    height: 48px;
+    background-repeat: no-repeat;
+    display: inline-block;
+    padding: 20px;
+}
+
+.teaser {
+    text-align: justify;
+    padding-left: 30px;
+    padding-right: 50px;
+    clear: both;
+}
+
+.left img {
+    float: left;
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.right img {
+    float: right;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.column {
+    float: left;
+    padding-left: 40px;
+    padding-right: 40px;
+    width: 430px;
+    text-align: justify;
 }
