--- a/lib/layout/default.css
+++ b/lib/layout/default.css
@@ -458,3 +458,9 @@ a:hover {
     right: 4px;
     white-space: nowrap;
 }
+
+.box_inlay {
+    background-color: rgba(215, 215, 215, 0.5);
+    border-radius: 5px;
+    box-shadow: 1px 1px 4px 1px rgba(0,0,0,0.25) inset;
+}
