--- a/lib/layout/sheet.css
+++ b/lib/layout/sheet.css
@@ -11,6 +11,7 @@
     -ms-border-radius: 16px;
     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.5);
     padding: 24px;
+    z-index: 10;
 }
 
 #closesheet {
@@ -21,12 +22,6 @@
     height: 28px;
     border: 2px solid white;
     background-color: black;
-    font-family: courier;
-    font-size: 41px;
-    color: white;
-    line-height: 28px;
-    vertical-align: middle;
-    text-align: center;
     cursor: pointer;
     
     background-image: url(images/close.png);
@@ -43,13 +38,6 @@
     -moz-border-radius: 32px;
     -o-border-radius: 32px;
     -ms-border-radius: 32px;
-}
-
-@-moz-document url-prefix() {
-    #closesheet {
-        font-size: 40px;
-        line-height: 31px;
-    }
 }
 
 #sheet_body {
