--- a/lib/layout/tooltip.css
+++ b/lib/layout/tooltip.css
@@ -1,24 +1,72 @@
-.tooltip {
-    width: auto;
-    height: auto;
-    display: inline-block;
+#tooltip {
+    position: absolute;
+    background-color: rgba(0,0,0,0.9);
+    border-radius: 4px;
+    box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.6);
+    padding: 9px;
+    color: white;
+    font-size: 10px;
+    font-family: Helvetica, Verdana, Arial, sans-serif; 
+    line-height: 1.5em;
+    z-index: 20;
 }
 
-.tooltip .textstatusok {
+#tooltip_arrow {
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    border: 10px solid rgba(0,0,0,0.8);
+}
+
+#tooltip_arrow.top {
+    top: -20px; 
+    border-top: 10px solid transparent;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+}
+
+#tooltip_arrow.bottom {
+    bottom: -20px;
+    border-bottom: 10px solid transparent;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+}
+
+#tooltip_arrow.left {
+    left: 16px;
+}
+
+#tooltip_arrow.right_badge {
+    right: 48px;
+}
+
+#tooltip_arrow.right {
+    right: 16px;
+}
+
+#tooltip_arrow.side {
+    left: -20px;
+    top: 16px;
+    border-bottom: 10px solid transparent;
+    border-left: 10px solid transparent;
+    border-top: 10px solid transparent;
+}
+
+#info_text .textstatusok {
     color: #00ff00;
     display: inline;
     font-size: 12px;
     white-space: nowrap;
 }
 
-.tooltip .textstatusabsent {
+#info_text .textstatusabsent {
     color: #ff4b48;
     display: inline;
     font-size: 12px;
     white-space: nowrap;
 }
 
-.tooltip .textstatuswait {
+#info_text .textstatuswait {
     color: #ffff00;
     display: inline;
     font-size: 12px;
@@ -34,14 +82,14 @@
     text-decoration: none;
 }
 
-.tooltip .textstatus {
+#tooltip .textstatus {
     color: #ccc;
     display: inline;    
     font-size: 12px;
     white-space: nowrap;
 }
 
-.tooltip .icon {
+#info_text .icon {
     display: block;
     margin-bottom: 10px;
     margin-right: 10px;
@@ -51,37 +99,37 @@
     cursor: pointer;
 }
 
-.tooltip .location {
+#info_text .location {
     font-weight: bold;
     font-size: 16px;
     margin-right: 10px;
     max-width: 250px;
 }
 
-.tooltip .time {
+#info_text .time {
     font-style: italic;
     font-size: 10px;
     color: #ccc;
 }
 
-.tooltip .textBlock {
+#info_text .textBlock {
     float: left;
 }
 
-.tooltip .description {
+#info_text .description {
     margin-top: 10px;
     margin-bottom: 15px;
     display: block;
     max-width: 250px;
 }
 
-.tooltip .functions {
+#info_text .functions {
     clear: left;
     margin-top: 10px;
     white-space: nowrap;
 }
 
-.class_select {
+#info_text .class_select {
     width: 50px;
     margin-right: 5px;
     margin-left: 5px;
@@ -92,134 +140,4 @@
     float: left;
     text-align: center;
     cursor: pointer;
-}
-
-#tooltip {
-    border-spacing: 0px 0px;
-    left: 10px;
-    top: 10px;
-    position: absolute;
-    display: block;
-    table-layout: auto;
-    z-index: 1;
-}
-
-/***************************************************
- info overlay (tooltip container)
-***************************************************/
-
-#tooltip .top {
-    height: 18px;
-}
-
-#tooltip .top .left {
-    background-repeat: no-repeat;
-    padding: 0px;
-    margin: 0px;
-    background-image: url(images/info_topleft.png);
-    width: 21px;
-}
-
-#tooltip .top .arrow {
-    width: 36px;
-    background-repeat: repeat-x;
-    background-image: url(images/info_toparrow.png);
-}
-
-#tooltip .top .arrowtr {
-    width: 62px;
-    background-repeat: repeat-x;
-    background-image: url(images/info_toparrow_right.png);
-}
-
-#tooltip .top .center {
-    background-image: url(images/info_top.png);
-    background-repeat: repeat-x;
-}
-
-#tooltip .top .right {
-    background-repeat: no-repeat;
-    background-image: url(images/info_topright.png);
-    width: 12px;
-}
-
-#tooltip .middle {
-    height: 45px;
-}
-
-#tooltip .middle .left {
-    padding: 0px;
-    margin: 0px;
-    background-repeat: repeat-y;
-    background-image: url(images/info_left.png);
-    width: 21px;
-}
-
-#tooltip .middle .arrow {
-    padding: 0px;
-    margin: 0px;
-    background-repeat: repeat-y;
-    background-image: url(images/info_leftarrow.png);
-    width: 21px;
-    height: 45px;
-}
-
-#tooltip .middle .center {
-    color: white;
-    font-size: 11px;
-    font-family: Helvetica, Verdana, Arial, sans-serif;
-    background-image: url(images/overlay.png);
-    background-repeat: repeat;
-}
-
-#tooltip .middle .right {
-    background-repeat: repeat-y;
-    background-image: url(images/info_right.png);
-    width: 12px;
-}
-
-#tooltip .middle2 {
-}
-
-#tooltip .middle2 .left {
-    padding: 0px;
-    margin: 0px;
-    background-repeat: repeat-y;
-    background-image: url(images/info_left.png);
-    width: 21px;
-}
-
-#tooltip .middle2 .right {
-    background-repeat: repeat-y;
-    background-image: url(images/info_right.png);
-    width: 12px;
-}
-
-#tooltip .bottom {
-    height: 19px;
-}
-
-#tooltip .bottom .left {
-    padding: 0px;
-    margin: 0px;
-    background-image: url(images/info_bottomleft.png);
-    background-repeat: no-repeat;
-    width: 21px;
-}
-
-#tooltip .bottom .arrow {
-    width: 36px;
-    background-repeat: repeat-x;
-    background-image: url(images/info_bottomarrow.png);
-}
-
-#tooltip .bottom .center {
-    background-image: url(images/info_bottom.png);
-    background-repeat: repeat-x;
-}
-
-#tooltip .bottom .right {
-    background-image: url(images/info_bottomright.png);
-    background-repeat: no-repeat;
-    width: 12px;
 }
