--- a/lib/layout/tooltip.css
+++ b/lib/layout/tooltip.css
@@ -2,7 +2,13 @@
     position: absolute;
     background-color: rgba(0,0,0,0.85);
     border-radius: 4px;
+    
     box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
+    -webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
+    -moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
+    -o-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
+    -ms-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
+    
     padding: 9px;
     color: white;
     font-size: 10px;
