--- a/lib/layout/tooltip.css
+++ b/lib/layout/tooltip.css
@@ -136,12 +136,30 @@
 
 #info_text .class_select {
     width: 50px;
-    margin-right: 5px;
-    margin-left: 5px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin: 5px;
     line-height: 12px;
     font-size: 9px;
     float: left;
     text-align: center;
+}
+
+#info_text .class_selected {
+    width: 32px;
+    height: 32px;
+    margin: 5px;
+    float: left;
+}
+
+#info_text .multi_selected {
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #888;
+}
+
+#info_text .shuffle {
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    margin: 5px;
+    vertical-align: top;
 }
