Role images squared

--- a/lib/layout/raidlist.css
+++ b/lib/layout/raidlist.css
@@ -124,6 +124,11 @@
     padding-top: 5px;
     font-size: 18px;
     color: #AAA;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
+    -ms-border-radius: 5px;
 }
 
 #raidHistory {
