--- a/lib/layout/default.css
+++ b/lib/layout/default.css
@@ -346,20 +346,24 @@ a:hover {
     text-align: left;  
     margin-top: 10px;
     margin-bottom: 5px;
-    border: 1px solid #aaa;   
-    -moz-border-radius: 4px; 
-    -webkit-border-radius: 4px;
+    border: 1px solid #aaa; 
     border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    -ms-border-radius: 4px;
 }
 
 #strength {
     display: inline-block;
     height: 16px;
     background-color: #ccc;
-    width: 0%;    
-    -moz-border-radius: 4px; 
-    -webkit-border-radius: 4px; 
+    width: 0%; 
     border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    -ms-border-radius: 4px;
 }
 
 #hashing {
@@ -369,10 +373,12 @@ a:hover {
     width: 202px;
     height: 16px;
     background-color: #ccc;
-    text-align: left;                
-    -moz-border-radius: 4px; 
-    -webkit-border-radius: 4px;
+    text-align: left; 
     border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    -ms-border-radius: 4px;
 }
 
 .pglabel {
@@ -391,10 +397,12 @@ a:hover {
     display: inline-block;
     height: 16px;
     background-color: #666;
-    width: 0%;    
-    -moz-border-radius: 4px; 
-    -webkit-border-radius: 4px;
+    width: 0%; 
     border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    -ms-border-radius: 4px;
 }
 
 #eventblocker {
