--- a/lib/layout/profile.css
+++ b/lib/layout/profile.css
@@ -493,9 +493,11 @@
     width: 150px;
     height: 23px;
     background-color: #ccc;
-    -moz-border-radius: 4px; 
-    -webkit-border-radius: 4px;
     border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    -ms-border-radius: 4px; 
 }
 
 #profile_hashing .pglabel {
@@ -509,10 +511,12 @@
     height: 16px;
     background-color: #ddd;
     text-align: left;  
-    border: 1px solid #ccc;   
-    -moz-border-radius: 4px; 
-    -webkit-border-radius: 4px;
+    border: 1px solid #ccc;
     border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    -ms-border-radius: 4px; 
     display: inline-block;
 }
 
