--- a/lib/layout/raid.css
+++ b/lib/layout/raid.css
@@ -347,10 +347,12 @@
     margin-right: 4px;
     width: 140px;
     height: 32px;
-    overflow: visible;
-    -moz-border-radius: 4px; 
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
+    overflow: visible; 
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
+    -ms-border-radius: 5px;
 }
 
 #raiddetail .break {
@@ -360,10 +362,12 @@
     margin-right: 4px;
     width: 140px;
     height: 32px;
-    overflow: visible;
-    -moz-border-radius: 4px; 
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
+    overflow: visible; 
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
+    -ms-border-radius: 5px;
 }
 
 #raiddetail .clickable {
@@ -472,10 +476,12 @@
     color: rgb(200,152,152);
     box-shadow: inset 1px 1px 8px rgba(200, 0, 0, 0.15);    
     font-size: 13px;
-    font-weight: bold; 
-    -moz-border-radius: 4px; 
-    -webkit-border-radius: 4px;
+    font-weight: bold;
     border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    -ms-border-radius: 4px; 
     text-align: center;
 }
 
