--- a/lib/layout/settings.css
+++ b/lib/layout/settings.css
@@ -139,9 +139,11 @@
 
 #settings .groupTarget {
     background-color: #eeeeee;
-    -moz-border-radius: 6px; 
-    -webkit-border-radius: 6px;
     border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -o-border-radius: 6px;
+    -ms-border-radius: 6px; 
 }
 
 #settings .user {
