--- a/lib/layout/tooltip.css
+++ b/lib/layout/tooltip.css
@@ -1,7 +1,12 @@
 #tooltip {
     position: absolute;
     background-color: rgba(0,0,0,0.85);
+    
     border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    -ms-border-radius: 4px; 
     
     box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
     -webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
