--- a/lib/layout/calendar.css
+++ b/lib/layout/calendar.css
@@ -133,9 +133,9 @@
     background-image: url(images/raid_canceled_small.png);
     background-repeat: no-repeat;
     float: right;
-    top: -16px;
     width: 32px;
     height: 32px;
+    top: -15px;
     position: relative;
 }
 
@@ -143,7 +143,8 @@
     background-image: url(images/raid_locked_small.png);
     background-repeat: no-repeat;
     float: right;
-    top: -16px;
+    left: 1px;
+    top: -13px;
     width: 32px;
     height: 32px;
     position: relative;
@@ -157,6 +158,7 @@
     font-weight: bold;
     font-size: 14px;
     color: #00ff00;
+    z-index: 5;
 }
 
 #calendar .raid .statusabsent {
@@ -167,6 +169,7 @@
     font-weight: bold;
     font-size: 14px;
     color: #ff4b48;
+    z-index: 5;
 }
 
 #calendar .raid .statuswait {
@@ -177,6 +180,7 @@
     font-weight: bold;
     font-size: 14px;
     color: #ffff00;
+    z-index: 5;
 }
 
 #calendar .raid .status {
@@ -187,6 +191,7 @@
     font-weight: bold;
     font-size: 14px;
     color: #cccccc;
+    z-index: 5;
 }
 
 #calendar .raid .tooltip {
