--- a/lib/layout/settings.css
+++ b/lib/layout/settings.css
@@ -390,75 +390,60 @@
 #statistics .bar {
     margin-bottom: 5px;
     float: left;
-}
-
-#statistics .start {
-    background: url(images/progress_start.png);
-    display: inline-block;
-    width: 7px;
-    height: 26px;
-    position: absolute;
-    float: left;
-}
-
-#statistics .start_bar {
-    background: url(images/progress_start.png);
-    width: 7px;
-    height: 26px;
-    position: relative;
-    float: left;
-    left: 7px;
-    margin-left: -7px;
-}
-
-#statistics .end {
-    background: url(images/progress_end.png);
-    width: 7px;
-    height: 26px;
-    position: relative;
-    float: right;
-    right: 7px;
-}
-
-#statistics .box .end {
-    background: url(images/progress_end.png);
-    width: 7px;
-    height: 26px;
-    position: relative;
-    float: right;
-    right: 0px;
+    border-radius: 4px;
+    border: 1px solid #999;
 }
 
 #statistics .ok {
-    background: url(images/progress_green.png);
     display: inline-block;
     height: 26px;
     color: #00AA00;
     text-align: right;
+    
+    background: linear-gradient(to bottom, rgba(117,225,111,1) 0%,rgba(79,217,73,1) 100%); 
+    background: -webkit-linear-gradient(top, rgba(117,225,111,1) 0%,rgba(79,217,73,1) 100%);
+    background: -moz-linear-gradient(top, rgba(117,225,111,1) 0%, rgba(79,217,73,1) 100%);
+    background: -o-linear-gradient(top, rgba(117,225,111,1) 0%,rgba(79,217,73,1) 100%);
+    background: -ms-linear-gradient(top, rgba(117,225,111,1) 0%,rgba(79,217,73,1) 100%);
 }
 
 #statistics .available {
-    background: url(images/progress_yellow_stripe.png);
     display: inline-block;
     height: 26px;
     color: #888822;
     text-align: right;
+    
+    background: linear-gradient(to bottom, rgba(214,206,147,1) 0%,rgba(200,189,108,1) 100%);
+    background: -webkit-linear-gradient(top, rgba(214,206,147,1) 0%,rgba(200,189,108,1) 100%);
+    background: -moz-linear-gradient(top, rgba(214,206,147,1) 0%, rgba(200,189,108,1) 100%);
+    background: -o-linear-gradient(top, rgba(214,206,147,1) 0%,rgba(200,189,108,1) 100%);
+    background: -ms-linear-gradient(top, rgba(214,206,147,1) 0%,rgba(200,189,108,1) 100%);
 }
 
 #statistics .unavailable {
-    background: url(images/progress_red_stripe.png);
     display: inline-block;
     height: 26px;
     color: #AA6666;
     text-align: right;
+    
+    background: linear-gradient(to bottom, rgba(205,158,157,1) 0%,rgba(189,129,127,1) 100%);
+    background: -webkit-linear-gradient(top, rgba(205,158,157,1) 0%,rgba(189,129,127,1) 100%);
+    background: -moz-linear-gradient(top, rgba(205,158,157,1) 0%, rgba(189,129,127,1) 100%);
+    background: -o-linear-gradient(top, rgba(205,158,157,1) 0%,rgba(189,129,127,1) 100%);
+    background: -ms-linear-gradient(top, rgba(205,158,157,1) 0%,rgba(189,129,127,1) 100%);
 }
 
 #statistics .missed {
-    background: url(images/progress_grey.png);
     display: inline-block;
     height: 26px;
     color: #777777;
     text-align: right;
+    
+    background: linear-gradient(to bottom, rgba(177,177,177,1) 0%,rgba(154,154,154,1) 100%);
+    background: -webkit-linear-gradient(top, rgba(177,177,177,1) 0%,rgba(154,154,154,1) 100%);
+    background: -moz-linear-gradient(top, rgba(177,177,177,1) 0%, rgba(154,154,154,1) 100%);
+    background: -o-linear-gradient(top, rgba(177,177,177,1) 0%,rgba(154,154,154,1) 100%);
+    background: -ms-linear-gradient(top, rgba(177,177,177,1) 0%,rgba(154,154,154,1) 100%);
 }
 
 #statistics .count {
@@ -478,6 +463,8 @@
     display: inline-block;
     width: 14px;
     float: left;
+    border-radius: 4px;
+    border: 1px solid #999;
 }
 
 #statistics .labels .label {
@@ -488,18 +475,8 @@
     width: 140px;
     line-height: 26px;
     vertical-align: bottom;
+    text-align: left;
     float: left;
-}
-
-#statistics .labels .start {
-    position: relative;
-    display: inline-block;
-}
-
-#statistics .labels .end {
-    display: inline-block;
-    position: relative;
-    margin-left: 0px;
 }
 
 #tooltip .removeLink {
