--- a/lib/layout/settings.css
+++ b/lib/layout/settings.css
@@ -392,6 +392,7 @@
     float: left;
     border-radius: 4px;
     border: 1px solid #999;
+    overflow: hidden;
 }
 
 #statistics .ok {
@@ -465,6 +466,7 @@
     float: left;
     border-radius: 4px;
     border: 1px solid #999;
+    overflow: hidden;
 }
 
 #statistics .labels .label {
