--- a/lib/layout/combobox.css
+++ b/lib/layout/combobox.css
@@ -1,32 +1,26 @@
 .combobox {
+    display: inline-block;
     overflow: visible;
     white-space: nowrap;
-    display: inline-block;
-    position: relative;
-    margin-right: 0px;
-    margin-left: 0px;
+    position: relative; /* for absolute positioning of .combobox_list */
 }
 
 .combobox_value {
-    float: left;
     display: inline-block;
-    text-align: left;
-    padding-left: 6px;
-    margin-right: 0px;
-    cursor: pointer;
-    vertical-align: middle;
-    padding-top: 1px;
     overflow: hidden;
+    padding: 0 0 0 6px;
+    margin: 0;
+    height: 100%;
+    text-align: left;
+    vertical-align: middle;
 }
 
 .combobox_value_dark {
     opacity: 0.4;
-    filter: alpha(opacity=40);
 }
 
 .combobox_value_bright {
     opacity: 0.6;
-    filter: alpha(opacity=60);
 }
 
 .combobox_edit {
@@ -56,12 +50,10 @@
 
 .combobox_open {
     opacity: 1.0;
-    filter: alpha(opacity=100);
-    margin-left: 1px;
-    margin-right: 0px;
-    cursor: pointer;
+    margin: 0px 0px 0px 1px;
     display: inline-block;
-    float: right;
+    width: 16px;
+    height: 100%;
 }
 
 .combobox_list {
@@ -69,27 +61,22 @@
     background-color: black;
     border: 1px solid #aaaaaa;
     opacity: 0.9;
-    filter:Alpha(opacity=90);
     overflow-y: auto;
     overflow-x: hidden;
     max-height: 198px;
     float: left;
-    z-index: 1;
+    z-index: 15;
     clear: both;
     display: none;
 }
 
 .combobox_list .option {
-    padding-left: 8px;
-    padding-right: 8px;
-    padding-top: 2px;
-    padding-bottom: 2px;
+    padding: 2px 8px 2px 8px;
     color: white;
     height: 16px;
-    font-size: 10px;
+    line-height: 15px;
     vertical-align: middle;
     opacity: 1.0;
-    filter:Alpha(opacity=100);
     color: #aaaaaa;
 }
 
@@ -102,7 +89,6 @@
 }
 
 .combobox_list .option .text {
-    line-height: 16px;
     font-size: 11px;
     display: inline-block;
     font-family: Helvetica, Verdana, Arial, sans-serif;
@@ -112,7 +98,6 @@
     color: white;
     height: 7px;
     opacity: 1.0;
-    filter:Alpha(opacity=100);
     border-bottom: 1px dotted #aaa;
     margin-bottom: 6px;
 }
