--- a/lib/layout/default.css
+++ b/lib/layout/default.css
@@ -37,6 +37,22 @@ a:hover {
     height: 22px;
 }
 
+.ui-widget {
+    font-size: 11px;    
+}
+
+.ui-datepicker {
+    font-size: 13px;
+}
+
+.ui-dialog-title {
+    font-size: 14px;
+}
+
+.ui-dialog-content {
+    font-size: 12px;   
+}
+
 #preload {
     position: fixed;
     float: left;
@@ -479,4 +495,69 @@ a:hover {
     top: 470px;
     right: 4px;
     white-space: nowrap;
+}
+
+input[type=text] {
+    background-color: #ccc;
+    border: 1px solid #aaa;
+    color: #fefefe;
+    padding: 2px;
+}
+
+input[type=password] {
+    background-color: #ccc;
+    border: 1px solid #aaa;
+    color: #fefefe;
+    padding: 2px;
+}
+
+input[type=password]:disabled {
+    background-color: #ddd;
+    border: 1px solid #ddd;
+}
+
+textarea {
+    background-color: #ccc;
+    border: 1px solid #aaa;
+    color: #fefefe;
+    padding: 2px 4px;
+}
+
+.tabs {
+    width: 47px;
+    height: 220px;
+    float: left;
+    background-repeat: no-repeat;
+}
+
+.tab_icon {
+    width: 32px;
+    height: 32px;
+    margin-left: 2px;
+    margin-top: 5px;
+}
+
+.settingLine {
+    min-height: 20px;    
+    vertical-align: top;
+}
+
+.settingNewSection {
+    margin-top: 15px;
+}
+
+.settingLabel {
+    width: 200px;
+    display: inline-block;
+    clear: left;
+    margin-bottom: 8px;
+    vertical-align: top;
+    padding-top: 4px;
+}
+
+.settingField {
+    margin-left: 6px;
+    margin-bottom: 8px;
+    vertical-align: top;
+    display: inline-block;
 }
