--- a/lib/layout/settings.css
+++ b/lib/layout/settings.css
@@ -11,14 +11,26 @@
     float: left;
 }
 
-#raidsettings {
-    padding-left: 60px;
+#groups {
+    padding-left: 5px;
     padding-top: 10px;
+    height: 420px;
+    width: 920px;
+    overflow: hidden;
 }
+
+#raidsettings {
+    padding-left: 15px;
+    padding-top: 15px;
+    height: 410px;
+    width: 900px;
+    overflow: hidden;
+}
+
 
 #locationsettings {
     padding-left: 15px;
-    padding-top: 10px;
+    padding-top: 15px;
     height: 410px;
     width: 900px;
     overflow-y: auto;
@@ -26,7 +38,7 @@
 
 #statistics {
     padding-left: 15px;
-    padding-top: 10px;
+    padding-top: 14px;
     height: 410px;
     width: 900px;
     overflow-y: auto;
@@ -72,24 +84,9 @@
     padding: 0px;
 }
 
-#settings .propLabel {
-    width: 175px;
-    display: inline-block;
-}
-
 #settings .propLabel2 {
     margin-left: 10px;
     display: inline-block;
-}
-
-#settings .propLine {
-    margin-bottom: 4px;
-    width: 700px;
-}
-
-#settings .propLineLast {
-    margin-bottom: 14px;
-    width: 700px;
 }
 
 #settings .timeField {
@@ -106,8 +103,8 @@
 #settings .groupSlot {
     float: left;
     margin-right: 7px;
-    width: 227px;
-    height: 420px;
+    width: 224px;
+    height: 410px;
     
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -118,7 +115,7 @@
 }
 
 #settings .groupSlot .head {
-    width: 227px;
+    width: 224px;
     height: 20px;
     background-color: rgba(0,0,0,0.1);
     text-align: center;
@@ -130,8 +127,8 @@
 }
 
 #settings .groupSlot .content {
-    width: 225px;
-    height: 388px;
+    width: 224px;
+    height: 378px;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -228,20 +225,6 @@
 
 #settings .user .functionEdit:hover {
     background-image: url(images/edituser.png);
-}
-
-#settings .tabs {
-    width: 47px;
-    height: 220px;
-    float: left;
-    background-repeat: no-repeat;
-}
-
-#settings .tab_icon {
-    width: 32px;
-    height: 32px;
-    margin-left: 2px;
-    margin-top: 5px;
 }
 
 #settings .users {
